syntax = "proto3";

option go_package = "github.com/c95rt/grpc/pb";

package pb;

service UserService {
    rpc Login (LoginRequest) returns (User) {}
    rpc InsertUser (InsertUserRequest) returns (User) {}
}

message User {
    string ID = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message InsertUserRequest {
    string email = 1;
    string firstname = 2;
    string lastname = 3;
    string password = 4;
    string birthDate = 5;
    string address = 6;
}